--- a/web/src/styles/reset.css
+++ b/web/src/styles/reset.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all ease-in-out 300ms;
+  /* transition: all ease-in-out 300ms; */
 }
 
 html,
