--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -12,4 +12,6 @@
 }
 
 .ql-toolbar { @apply bg-white; }
-.ql-toolbar .ql-formats { @apply border border-gray-100 rounded-sm; }
+.ql-toolbar .ql-formats { @apply border border-gray-300 rounded-sm; }
+.ql-container { @apply border border-red-500 h-[250px] }
+.ql-container .ql-editor { @apply bg-white }
