--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Open+Sans:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,500;6..12,600;6..12,700&display=swap');
 @import './reset.css';
 
 @tailwind base;
@@ -7,7 +7,7 @@
 
 @layer base {
   html {
-    font-family: 'Open Sans', system-ui, sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
   }
 }
 
